--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -63,3 +63,23 @@ jobs:
 
       - name: Run tests
         run: make run_tests
+
+  run_coverage:
+    runs-on: ubuntu-22.04
+    needs: [install_dependencies]
+    steps:
+      - name: Checkout to feature branch
+        uses: actions/checkout@v3
+
+      - name: Restoring cached venv
+        id: cached_venv
+        uses: actions/cache@v3
+        with:
+          path : .venv
+          key: CI_P_P_${{hashFiles('requirements.txt')}}
+
+      - name: Run coverage report
+        run: make save_coverage_report
+      
+      - name: Comment coverage
+        uses: coroo/pytest-coverage-commentator@v1.0.2
