feat: PIZ6 add doc to deploy and refactor of make file

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,7 @@
         "app"
     ],
     "python.testing.unittestEnabled": false,
-    "python.testing.pytestEnabled": true
+    "python.testing.pytestEnabled": true,
+    "plantuml.server": "http://www.plantuml.com/plantuml",
+    "plantuml.render": "Local",
 }
