--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,16 +11,14 @@ python = "^3.10"
 alembic = "1.7.5"
 attrs = "21.4.0"
 autopep8 = "1.6.0"
-black = "22.6.0"
 click = "8.0.3"
-coverage = "6.4.4"
-faker = "14.2.0"
 flake8 = "4.0.1"
 flask = "2.0.2"
 flask-cors = "3.0.10"
 flask-marshmallow = "0.14.0"
 flask-migrate = "3.1.0"
 flask-script = "2.0.6"
+flask-seeder = "1.2.0"
 flask-sqlalchemy = "2.5.1"
 greenlet = "1.1.2"
 importlib-metadata = "4.10.1"
@@ -33,11 +31,7 @@ markupsafe = "2.0.1"
 marshmallow = "3.14.1"
 marshmallow-sqlalchemy = "0.27.0"
 mccabe = "0.6.1"
-mypy-extensions = "0.4.3"
-numpy = "1.23.2"
 packaging = "21.3"
-pathspec = "0.9.0"
-platformdirs = "2.5.2"
 pluggy = "1.0.0"
 py = "1.11.0"
 pycodestyle = "2.8.0"
@@ -45,14 +39,14 @@ pyflakes = "2.4.0"
 pyparsing = "3.0.7"
 pytest = "6.2.5"
 pytest-assume = "2.4.3"
-pytest-cov = "3.0.0"
-python-dateutil = "2.8.2"
 six = "1.16.0"
 sqlalchemy = "1.4.31"
 toml = "0.10.2"
-tomli = "2.0.1"
 werkzeug = "2.0.2"
 zipp = "3.7.0"
+coverage = "6.5.0"
+pytest-cov = "4.0.0"
+black = "22.6.0"
 
 
 [build-system]
